--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>pyDiskX</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="rootDirectoyPushButton">
@@ -110,6 +110,75 @@
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="extensionsTreeListWidget">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>60</y>
+      <width>151</width>
+      <height>241</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="extensionsLabel">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>40</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>File Types: folder tree</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="extensionsLabel_2">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>310</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>File Types: this folder</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="extensionsFolderListWidget">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>330</y>
+      <width>151</width>
+      <height>311</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>620</x>
+      <y>10</y>
+      <width>111</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Max folder depth:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="maxFolderDepthLineEdit">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>10</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
     </property>
    </widget>
   </widget>
